using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeil = "isOnCeil";
    internal static string yVelocity = "yVelocity";
    internal static string canMove = "canMove";
    internal static string jumpTrigger = "jump";
    internal static string dashTrigger = "dash";
}